<resources>
    <string name="app_name">Register</string>
    <string name="lol">Лол</string>
    <string name="kek">Кек</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="to_regist">Нет аккаунта? Регистрация</string>
    <string name="to_login">Уже есть аккаунт? Войти</string>
    <string name="expample_mail">simpleEmail@pochta.kek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="just_str">Просто надпись</string>
    <string name="write_here">Напиши сюда</string>
    <string name="name_and_surname">Имя Фамилия</string>
</resources>
