<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:id="@+id/textView"
                android:textSize="36sp"
                android:textStyle="bold" android:textColor="@color/bestColor" android:text="@string/kek"
                android:layout_weight="1" android:layout_marginBottom="4dp" android:layout_marginTop="4dp"
                android:layout_marginLeft="12dp" android:layout_marginRight="12dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/email"
                android:layout_marginLeft="12dp" android:layout_marginRight="12dp"/>
        <EditText
                android:layout_width="match_parent" android:backgroundTint="@color/bestColor"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextmail" android:layout_marginLeft="12dp" android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp" android:drawableRight="@drawable/mail_icon"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextName" android:layout_marginBottom="8dp" android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" android:layout_marginTop="8dp" android:hint="@string/name"
                android:drawableRight="@drawable/person_icon"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextSurname" android:layout_marginBottom="8dp" android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" android:layout_marginTop="8dp" android:hint="@string/surname"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextPassword" android:layout_marginBottom="8dp" android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" android:layout_marginTop="8dp" android:hint="@string/password"
                android:drawableRight="@drawable/lock_icon"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextConfirm" android:layout_marginBottom="8dp" android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" android:layout_marginTop="8dp"
                android:hint="@string/confirm_password" android:drawableRight="@drawable/unlock_icon"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button" android:text="@string/registration"
                android:background="@drawable/rounded_corners" android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp" android:layout_marginRight="12dp" android:layout_marginTop="4dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/to_login"
                android:textSize="18sp" android:textColor="@color/black" android:layout_margin="4dp"
                android:gravity="center" android:paddingBottom="80dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>