<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatScreen"
        android:orientation="vertical"
        android:layout_weight="1">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:id="@+id/userInfContainer">

        <ImageView
                android:layout_width="57dp"
                android:layout_height="51dp"
                android:id="@+id/avatarIv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                app:srcCompat="@drawable/round_image" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/userInfTv"
                app:layout_constraintStart_toEndOf="@+id/avatarIv"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                android:text="@string/name_and_surname" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/justStrTv"
                app:layout_constraintStart_toEndOf="@+id/avatarIv"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/avatarIv"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/just_str"
                android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#3863E4"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/sepLineUp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chatRv"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1" />

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#404040"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/sepLineDown"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/messageContainer"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_corners_edit_text"
            android:layout_marginBottom="20dp">

        <EditText
                android:layout_width="284dp"
                android:layout_height="48dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/messageEd"
                android:hint="@string/write_here"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/sendMesImB"
                android:background="#00FFFFFF"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sendMesImB"
                android:background="@android:drawable/sym_action_chat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/messageEd"
                app:layout_constraintBottom_toBottomOf="@+id/messageEd"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                app:layout_constraintVertical_bias="0.625" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>